--- a/app/src/main/res/layout/activity_display_profile.xml
+++ b/app/src/main/res/layout/activity_display_profile.xml
@@ -144,22 +144,8 @@
                         android:background="#00000000"
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="16dp"
-                        android:layout_marginRight="60dp"
+                        android:layout_marginRight="10dp"
                         android:layout_marginBottom="16dp"/>
-
-                    <ImageButton
-                        android:id="@+id/fav_profile"
-                        android:layout_width="35dp"
-                        android:layout_height="?attr/actionBarSize"
-                        android:paddingTop="15dp"
-                        android:paddingBottom="15dp"
-                        android:src="@drawable/heart_outline"
-                        android:layout_alignParentRight="true"
-                        android:scaleType="centerCrop"
-                        android:tint="#ffffff"
-                        android:background="#00000000"
-                        android:layout_marginRight="10dp"/>
-
 
                 </RelativeLayout>
 
@@ -819,6 +805,29 @@
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fav_profile"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom|center"
+        android:src="@drawable/star"
+        android:layout_alignParentBottom="true"
+
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="70dp"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/message_profile"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom|center"
+        android:src="@drawable/inbox"
+        android:layout_alignParentBottom="true"
+
+        android:layout_marginBottom ="16dp"
+        android:layout_marginRight ="70dp"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
