--- a/app/src/main/res/layout/activity_promote_profile_pop_up.xml
+++ b/app/src/main/res/layout/activity_promote_profile_pop_up.xml
@@ -5,47 +5,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp"
+    android:background="@color/Color_White"
     tools:context="com.twenty.four.crafts.SubscribePopUp">
 
+   <RelativeLayout
+       android:padding="20dp"
+       android:layout_marginBottom="20dp"
+       android:background="@drawable/bg_gradient"
+       android:id="@+id/headerPromoteProfile"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+
+
+       <de.hdodenhof.circleimageview.CircleImageView
+           android:layout_width="80dp"
+           android:layout_height="80dp"
+           android:src="@drawable/logo"
+           android:layout_centerInParent="true"/>
+
+   </RelativeLayout>
+
+
+
     <TextView
+        android:id="@+id/textHeaderPromoteProfile"
+        android:textColor="#000000"
+        android:layout_below="@id/headerPromoteProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/header_textview"
-        android:text="Promote Yourself"
+        android:text="promote profile"
+        android:fontFamily="sans-serif-smallcaps"
         android:textStyle="bold"
-        android:textSize="25dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center_horizontal"/>
-
-    <ImageView
-        android:layout_below="@id/header_textview"
-        android:layout_width="60dp"
-        android:id="@+id/Image"
-        android:layout_height="60dp"
-        android:padding="10dp"
-        android:layout_centerHorizontal="true"
-        android:background="#000000"/>
-
+        android:textSize="25sp"
+        android:gravity="center"/>
 
 
     <TextView
+        android:id="@+id/textContentPromoteProfile"
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="LET DIRECTORS AND PRODUCERS FIND YOU EASILY. Stand out from the crowd."
-        android:layout_below="@id/Image"
-        android:textSize="15dp"
-        android:id="@+id/Sentence_Text"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:textColor="#000000"
+        android:layout_below="@id/textHeaderPromoteProfile"
+        android:text="Let directors and producers find you easily. Stand out from the crowd."/>
 
 
-    <Button
-        android:onClick="purchaseCoins"
+    <RelativeLayout
+        android:id="@+id/layout1PromoteProfile"
+        android:layout_below="@id/textContentPromoteProfile"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="30 coins/day"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:background="@drawable/bg_gradient"
+        android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/button1PromoteProfile"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:textColor="#ffffff"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:text="Promote Yourself - 12 hrs - 50 coins"
+        android:background="?android:attr/selectableItemBackground"/>
+
+
+    </RelativeLayout>
+
+
+
+
+    <RelativeLayout
+        android:layout_below="@id/layout1PromoteProfile"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/bg_gradient"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/button2PromoteProfile"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            android:textColor="#ffffff"
+            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Promote Yourself - 24 hrs - 90 coins"
+            android:background="?android:attr/selectableItemBackground"/>
+
+
+    </RelativeLayout>
+
+
+
+
 </RelativeLayout>
 
