--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_gradient"
@@ -10,11 +9,6 @@
     android:orientation="vertical"
     tools:context="com.twenty.four.crafts.registration.StartingScreen">
 
-    <RelativeLayout
-        android:id="@+id/layout1"
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="match_parent"
@@ -23,24 +17,25 @@
             android:textColor="#e2e2e2"
             android:layout_marginTop="150dp"
             android:textSize="20dp"
-            android:gravity="center"
-            />
+            android:gravity="center" />
 
-    </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/container"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:paddingBottom="40dp"
-        android:layout_height="wrap_content">
+        android:layout_height="350dp">
 
         <RelativeLayout
+            android:id="@+id/craftsContainer"
             android:padding="10dp"
             android:layout_marginTop="30dp"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="50dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
 
             <ImageView
                 android:layout_centerHorizontal="true"
@@ -63,12 +58,14 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/clientsContainer"
             android:padding="10dp"
             android:layout_marginTop="30dp"
             android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="50dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
 
             <ImageView
                 android:layout_centerHorizontal="true"
@@ -94,8 +91,4 @@
     </RelativeLayout>
 
 
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
