Encounters Gridview + Necessary RecyclerViews added

--- a/app/src/main/res/layout/activity_dashboard_favourites_tab_fragment.xml
+++ b/app/src/main/res/layout/activity_dashboard_favourites_tab_fragment.xml
@@ -7,21 +7,12 @@
     android:layout_height="match_parent"
     tools:context="com.twenty.four.crafts.DashboardFavouritesTabFragment">
 
-   <GridView
-       android:scrollbarStyle="outsideOverlay"
-       android:scrollbars="vertical"
-       android:id="@+id/favs_grid"
+   <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:numColumns="3"
-       android:verticalSpacing="2dp"
-       android:horizontalSpacing="2dp"
-       android:nestedScrollingEnabled="true"
-       android:layout_gravity="center_horizontal"
-       android:layout_marginRight="5dp"
-       android:layout_marginLeft="5dp"
-       android:paddingTop="5dp"
-       android:layout_marginTop="10dp" />
+       android:id="@+id/favs_grid"
+       android:clipToPadding="false"
+       android:padding="@dimen/inner_item_offset"/>
 
    </LinearLayout>
 
