--- a/app/src/main/res/layout/favs_item.xml
+++ b/app/src/main/res/layout/favs_item.xml
@@ -9,9 +9,8 @@
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fav_item"
        android:layout_height="110dp"
-       android:layout_width="110dp"
-       android:layout_marginBottom="3dp"
-       android:layout_marginTop="3dp"
+       android:layout_width="match_parent"
+       android:layout_margin="3dp"
        android:scaleType="centerCrop"
        app:riv_corner_radius="10dp"/>
 
