--- a/app/src/main/res/layout/directorygridadapter.xml
+++ b/app/src/main/res/layout/directorygridadapter.xml
@@ -17,6 +17,7 @@
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_gravity="center"
         android:fontFamily="sans-serif-condensed"
         android:id="@+id/txtview"/>
 
