--- a/app/src/main/res/layout/activity_auditions_main.xml
+++ b/app/src/main/res/layout/activity_auditions_main.xml
@@ -8,6 +8,10 @@
     android:layout_height="match_parent"
     tools:context="com.twenty.four.crafts.AuditionsMain">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <ListView
         android:id="@+id/mainListView"
         android:layout_width="match_parent"
@@ -34,5 +38,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginRight="20dp"
         android:src="@drawable/ic_action_plus"/>
+
+    </RelativeLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
