--- a/app/src/main/res/layout/imageviewcellnewprofview.xml
+++ b/app/src/main/res/layout/imageviewcellnewprofview.xml
@@ -11,7 +11,7 @@
         android:layout_width="110dp"
         android:id="@+id/_image"
         android:layout_height="110dp"
-        android:src="@drawable/sample1"
+        android:src="@drawable/male_front"
         android:scaleType="centerCrop"
         android:layout_margin="5dp"
         app:riv_corner_radius="10dp"/>
