--- a/app/src/main/res/menu/menu_main_profile.xml
+++ b/app/src/main/res/menu/menu_main_profile.xml
@@ -5,6 +5,7 @@
         android:id="@+id/context_menu"
         android:icon="@drawable/btn_add"
         android:orderInCategory="100"
+        android:title="Options"
         app:showAsAction="always" />
 
 </menu>
