--- a/app/src/main/res/layout/activity_profile_view_edit_new.xml
+++ b/app/src/main/res/layout/activity_profile_view_edit_new.xml
@@ -158,10 +158,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
+        android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -187,27 +187,9 @@
                 <android.support.v7.widget.RecyclerView
                     android:layout_marginTop="10dp"
                     android:id="@+id/featuredPhotos"
+                    android:nestedScrollingEnabled="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-
-                <HorizontalScrollView
-                    android:layout_marginTop="10dp"
-                    android:background="#ffffff"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <LinearLayout
-                        android:padding="5dp"
-                        android:id="@+id/linlayoutimagesprofview"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                    </LinearLayout>
-
-                </HorizontalScrollView>
-
-
 
 
                 <TextView
@@ -224,25 +206,9 @@
                 <android.support.v7.widget.RecyclerView
                     android:layout_marginTop="10dp"
                     android:id="@+id/featuredVideos"
+                    android:nestedScrollingEnabled="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-
-
-                <HorizontalScrollView
-                    android:layout_marginTop="10dp"
-                    android:background="#ffffff"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <LinearLayout
-                        android:padding="5dp" android:id="@+id/linlayoutvideosprofview"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                    </LinearLayout>
-
-                </HorizontalScrollView>
 
             </LinearLayout>
 
