--- a/app/src/main/res/layout/activity_profile_view_new.xml
+++ b/app/src/main/res/layout/activity_profile_view_new.xml
@@ -95,18 +95,18 @@
 
                     <TextView
                         android:id="@+id/tv_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="center"
-                        android:textSize="24sp"
-                        android:textColor="@color/details_name_color"
                         android:ellipsize="end"
-                        android:maxLines="1"/>
+                        android:gravity="center"
+                        android:maxLines="1"
+                        android:textColor="@color/details_name_color"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="24sp" />
 
                     <TextView
                         android:id="@+id/tv_info"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="17sp"
                         android:textColor="@color/details_info_color"
@@ -118,7 +118,7 @@
 
                     <TextView
                         android:id="@+id/tv_status"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:textSize="18.4sp"
@@ -158,15 +158,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
+        android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:id="@+id/photosandvideoslayout"
                 android:layout_marginTop="5dp"
                 android:padding="10dp"
                 android:background="#ffffff"
@@ -181,18 +182,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                <TextView
-                    android:background="#ffffff"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:lineSpacingExtra="8dp"
-                    android:text="FEATURED PHOTOS"
-                    android:textColor="#000000"
-                    android:textSize="15dp" />
+                    <TextView
+                        android:background="#ffffff"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:lineSpacingExtra="8dp"
+                        android:text="FEATURED PHOTOS"
+                        android:textColor="#000000"
+                        android:textSize="15dp" />
 
                     <android.support.v7.widget.RecyclerView
                         android:layout_marginTop="10dp"
                         android:id="@+id/featuredPhotos"
+                        android:nestedScrollingEnabled="false"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
@@ -206,38 +208,22 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                <TextView
-                    android:background="#ffffff"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:lineSpacingExtra="8dp"
-                    android:text="FEATURED VIDEOS"
-                    android:textColor="#000000"
-                    android:textSize="15dp" />
+                    <TextView
+                        android:background="#ffffff"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:lineSpacingExtra="8dp"
+                        android:text="FEATURED VIDEOS"
+                        android:textColor="#000000"
+                        android:textSize="15dp" />
 
 
                     <android.support.v7.widget.RecyclerView
                         android:layout_marginTop="10dp"
                         android:id="@+id/featuredVideos"
+                        android:nestedScrollingEnabled="false"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
-
-
-                <HorizontalScrollView
-                    android:layout_marginTop="10dp"
-                    android:background="#ffffff"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <LinearLayout
-                        android:padding="5dp" android:id="@+id/linlayoutvideosprofview"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                    </LinearLayout>
-
-                </HorizontalScrollView>
 
                 </LinearLayout>
 
