--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -68,6 +68,7 @@
                 android:layout_weight="2"
                 android:layout_margin="5dp"
                 android:text="Name"
+                android:ellipsize="end"
                 android:textSize="25sp"
                 android:textColor="#ffffff"
                 android:textAlignment="center"
