--- a/app/src/main/res/menu/menu_profileview_edit.xml
+++ b/app/src/main/res/menu/menu_profileview_edit.xml
@@ -6,7 +6,7 @@
 
     <item
         android:id="@+id/action_edit_done"
-        android:icon="@drawable/done1"
+        android:icon="@drawable/edit_done"
         android:title="Edit Done"
         app:showAsAction="always" />
 
