--- a/app/src/main/res/layout/cell_content_layout.xml
+++ b/app/src/main/res/layout/cell_content_layout.xml
@@ -50,7 +50,7 @@
         <ImageView
             android:id="@+id/head_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:scaleType="centerCrop"
             android:src="@drawable/head_image" />
 
@@ -141,8 +141,8 @@
 
             <ImageView
                 android:id="@+id/content_avatar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_below="@id/content_avatar_title"
                 android:scaleType="centerCrop"
                 android:src="@drawable/avatar" />
