--- a/app/src/main/res/layout/cell_content_layout.xml
+++ b/app/src/main/res/layout/cell_content_layout.xml
@@ -512,6 +512,64 @@
 
         </LinearLayout>
 
+
+
+        <!-- divider line -->
+        <ImageView
+            android:id="@+id/lastdivider"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginTop="7dp"
+            android:src="@color/contentDividerLine" />
+
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/applicantsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/content_noofapplicants_badge"
+                    style="@style/ContentMainBadgeTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:text="TOTAL APPLICANTS" />
+
+                <TextView
+                    android:id="@+id/content_noofapplicants"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@id/content_noofapplicants_badge"
+                    android:layout_below="@id/content_noofapplicants_badge"
+                    android:text="5"
+                    android:textColor="@color/mainTextColor"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <!--                <TextView
+                                    android:id="@+id/content_delivery_date"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignStart="@id/content_delivery_time"
+                                    android:layout_below="@id/content_delivery_time"
+                                    android:text="@string/delivery_date_mock"
+                                    android:textColor="@color/mainTextColor"
+                                    android:textSize="14sp" />-->
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
         <!-- request button -->
         <TextView
             android:id="@+id/content_request_btn"
