Alert View + Enter Button

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -33,7 +33,7 @@
             android:textSize="18dp"
             android:layout_marginLeft="25dp"
             android:text="Account Information"
-            android:textColor="?attr/dayNnightText"
+            android:textColor="?attr/letters"
             />
 
 
