--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,8 @@
         android:hint="Email"
         android:drawableStart="@drawable/login_email"
         android:drawablePadding="10dp"
-        android:paddingLeft="20dp" />
+        android:paddingLeft="20dp"
+        android:imeOptions="actionNext"/>
 
 
         <android.support.design.widget.TextInputLayout
@@ -84,6 +85,7 @@
         android:drawableStart="@drawable/ic_lock_black_24dp"
         android:drawablePadding="10dp"
         android:paddingLeft="20dp"
+        android:imeOptions="actionDone"
         />
 
         </android.support.design.widget.TextInputLayout>
