encounters grid + cardswipe done!
adding and deleting from favs done

need to display favs on click of tab.

--- a/app/src/main/res/layout/encounters_grid_fragment.xml
+++ b/app/src/main/res/layout/encounters_grid_fragment.xml
@@ -11,4 +11,10 @@
         android:clipToPadding="false"
         android:padding="@dimen/inner_item_offset"/>
 
+    <ProgressBar
+        android:id="@+id/activity_main_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
 </LinearLayout>
