--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -148,6 +148,7 @@
         <item name="dayNnightTint">#000000</item>
         <item name="dayNnightBtn">#004E92</item>
         <item name="letters">#000000</item>
+        <item name="dayText">#8000</item>
     </style>
 
   <!--  Theme.AppCompat.DayNight.NoActionBar-->
@@ -160,7 +161,9 @@
         <item name="dayNnightTint">#FFFFFF</item>
         <item name="dayNnightBtn">#004E92</item>
         <item name="letters">#efe7d8</item>
+        <item name="dayText">#80ffffff</item>
     </style>
+
 
     <style name="WindowAnimationTransition">
         <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
