--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -8,53 +8,52 @@
     tools:context="com.twenty.four.crafts.DirectoryFragment">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    android:fillViewport="true">
-
-
-              <LinearLayout
-                  android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent">
-       <android.support.v4.view.ViewPager
-           android:id="@+id/directoryViewPager"
-           android:layout_width="match_parent"
-           android:layout_height="250dp"
-           android:layout_marginBottom="20dp"/>
-
-       <!--<android.support.v7.widget.RecyclerView
-           android:layout_marginTop="10dp"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:id="@+id/rv"/>-->
-                  <GridView
-                      android:padding="5dp"
-                      android:horizontalSpacing="20dp"
-                      android:verticalSpacing="30dp"
-                      android:gravity="center"
-                      android:layout_gravity="center"
-                      android:numColumns="3"
-                      android:id="@+id/gv"
-                      android:layout_marginTop="10dp"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"/>
-
-              </LinearLayout>
-
-</ScrollView>
+        android:fillViewport="true">
 
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads = "http://schemas.android.com/apk/res-auto"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/directoryViewPager"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginBottom="20dp" />
+
+            <!--<android.support.v7.widget.RecyclerView
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rv"/>-->
+            <GridView
+                android:id="@+id/gv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:horizontalSpacing="20dp"
+                android:numColumns="3"
+                android:padding="5dp"
+                android:verticalSpacing="30dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ad_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
         ads:adUnitId="@string/banner_ad_unit_id" />
 
