--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -56,6 +56,7 @@
         <attr name="dayNnightBtn" format="color" />
         <attr name="letters" format="color" />
         <attr name="dayText" format="color" />
+        <attr name="dayNNightNav" format="color" />
     </declare-styleable>
 
 </resources>
