Dashboard Material Design

--- a/app/src/main/res/layout/activity_auditions_main.xml
+++ b/app/src/main/res/layout/activity_auditions_main.xml
@@ -16,7 +16,7 @@
         android:id="@+id/mainListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg_gradient"
+        android:background="#151D26"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:divider="@android:color/transparent"
