--- a/app/src/main/res/layout/activity_craftsmen_dashboard.xml
+++ b/app/src/main/res/layout/activity_craftsmen_dashboard.xml
@@ -13,7 +13,7 @@
         android:id="@+id/craftsmen_dashboard_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#212121"
+        android:background="@drawable/b2"
         android:elevation="5dp"
         app:tabMode="fixed"
         app:tabGravity="fill">
