--- a/app/src/main/res/layout/activity_inbox_tab.xml
+++ b/app/src/main/res/layout/activity_inbox_tab.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed"
-        android:background="#212121"
+        android:background="@drawable/b2"
         android:elevation="5dp"
         app:tabGravity="fill"/>
 
