--- a/app/src/main/res/layout/trash_tab.xml
+++ b/app/src/main/res/layout/trash_tab.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#151D26">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recy_trash"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:scrollbars="vertical"
         android:scrollbarStyle="outsideOverlay"
-        android:layout_height="wrap_content"
-        android:id="@+id/recy_trash"/>
+        android:scrollbars="vertical" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_trash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/clear_all"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true" />
+        android:src="@drawable/clear_all" />
 
 </RelativeLayout>
